Geo-Nodes Output/Input getting Confused by plug and unplug #87142

Closed
opened 2021-04-02 18:48:30 +02:00 by Florian Kamenz · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-01 15:32, hash: 76cdcc2bca
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: n/a

Exact steps for others to reproduce the error

  • Start with default scene and add a new Geometry Node modifier to the Cube
  • Shift-D duplicate the 'Group Output' node
  • Disconnect the Geometry noodle from all outputs
  • Observe that the confusion noted in this bug has already occurred. The Cube is still displayed in the spreadsheet and viewport despite having no connections

[Original]
Create a second Geo-Nodes Output and try some things. Geo Nodes is getting Confused and sometimes you dont need Input and output.

See:
2021-04-02 14-03-26.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-01 15:32, hash: `76cdcc2bca` Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: n/a **Exact steps for others to reproduce the error** - Start with default scene and add a new Geometry Node modifier to the Cube - Shift-D duplicate the 'Group Output' node - Disconnect the Geometry noodle from all outputs - Observe that the confusion noted in this bug has already occurred. The Cube is still displayed in the spreadsheet and viewport despite having no connections [Original] Create a second Geo-Nodes Output and try some things. Geo Nodes is getting Confused and sometimes you dont need Input and output. See: [2021-04-02 14-03-26.mp4](https://archive.blender.org/developer/F9918096/2021-04-02_14-03-26.mp4)
Author

Added subscriber: @TimBrown

Added subscriber: @TimBrown

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Thanks for the report, and sorry we didn't get to it earlier. This is definitely a bug, some weirdness going with tagging updates probably.

Thanks for the report, and sorry we didn't get to it earlier. This is definitely a bug, some weirdness going with tagging updates probably.
Member

Oops, no update issue or anything. We just need an error message when there are more than one output node. I'll add that tomorrow.

Oops, no update issue or anything. We just need an error message when there are more than one output node. I'll add that tomorrow.

This issue was referenced by 20224369d9

This issue was referenced by 20224369d964efcd587b453030248da3c66343af
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-11-10 17:52:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87142
No description provided.